# dominion

./: CMakeLists.txt  COPYING  INSTALL  README.md  dominion.kdev4
.kdev4/: dominion.kdev4
cmake/Modules/: FindQwt.cmake
src/: main.cpp
src/gamelogic/: actor.cpp  actor.h  card.cpp  card.h  cardpile.cpp  cardpile.h  cost.cpp  cost.h  deck.cpp  deck.h  error.h  event.cpp  event.h  event_helpers.cpp  event_helpers.h  game.cpp  game.h  logger.cpp  logger.h  reaction.cpp  reaction.h  supply.cpp  supply.h  turn.cpp  turn.h
src/gamelogic/actors/: actor_factory.h  actor_helpers.cpp  actor_helpers.h  bigmoneyactor.h  buylist.h  buylistactor.cpp  buylistactor.h  condition.h  defaultcondition.h  defaultplay.cpp  defaultplay.h  engineactor.h  genericplay.cpp  genericplay.h  shepherdactor.h
src/gamelogic/buylist/: buylist.h  buylist.l  buylist.tab.cpp  buylist.tab.hpp  buylist.y  buylist.ypp  condition.h  conditionfactory.cpp  conditionfactory.h  defaultbuylist.h  defaultcondition.h  generate.sh  genericcardoption.h  lex.yy.cpp  parser.cpp  parser.h  strategy.cpp  strategy.h  test.buylist  test2.buylist  test3.buylist
src/gamelogic/cards/: cardid.h  cards.h  cartographer.h  cellar.h  chapel.h  copper.h  councilroom.h  crossroads.h  curse.h  duchy.h  embassy.h  estate.h  festival.h  foolsgold.h  gold.h  highway.h  illgottengains.h  laboratory.h  library.h  mandarin.h  margrave.h  market.h  mine.h  moat.h  moneylender.h  oasis.h  province.h  rebuild.h  remodel.h  shepherd.h  silver.h  smithy.h  throneroom.h  torturer.h  trader.h  tunnel.h  witch.h  workshop.h
src/gamelogic/cards/base/: copper.h  curse.h  gold.h  library.h  market.h  militia.h  mine.h  moat.h  moneylender.h  province.h  silver.h  smithy.h  throneroom.h  village.h  witch.h  workshop.h
src/gamelogic/cards/hinterlands/: cartographer.h  embassy.h  foolsgold.h  haggler.h  illgottengains.h  mandarin.h  trader.h  tunnel.h
src/gamelogic/cards/intrigue/: baron.h  bridge.h  conspirator.h  courtyard.h  duke.h  harem.h  ironworks.h  masquerade.h  miningvillage.h  minion.h  nobles.h  pawn.h  shantytown.h  steward.h  swindler.h  torturer.h  tradingpost.h  upgrade.h
src/gamelogic/tests/: histogram_test.cpp
src/ui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
strategies/: baron.buylist  bm.buylist  cartographer.buylist  chapel_bm.buylist  conspirator.buylist  counter_rebuild.buylist  defend.buylist  duke.buylist  embassy.buylist  engine_festival.buylist  estate.buylist  foolsgold.buylist  haggler.buylist  illgottengains.buylist  margrave.buylist  masquerade.buylist  megaturn.buylist  militia.buylist  minion.buylist  nobles.buylist  pawn.buylist  rebuild.buylist  smithy_bm.buylist  swindler.buylist  test.buylist  throneroom.buylist  torturer.buylist  torturer_react.buylist  trader.buylist  tradingpost.buylist  upgrade.buylist  witch.buylist  witch_bm.buylist
syntax/: buylist.xml
visualization/: visualize.ipynb
